tests/fixtures/errors/tag_readonly.z
kind: variant {
    a: null
    b: null
} as {
    which: u8.tag
}

main: function is {
    v: kind.a
    v.which = 3
    print "done"
}
